--- a/package.json
+++ b/package.json
@@ -1,25 +1,33 @@
 {
   "name": "student-settlement-system",
-  "version": "0.1.0",
+  "version": "1.0.0-snapshot",
   "private": true,
   "scripts": {
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "format-db-scheme": "prisma format",
+    "prisma-dev-migration": "dotenv -e .env.local prisma migrate dev",
+    "prisma-studio": "dotenv -e .env.local pnpm prisma studio",
+    "generate-prisma-client": "pnpm prisma generate"
   },
   "dependencies": {
     "@prisma/client": "^5.7.0",
+    "antd": "^5.12.1",
     "bcrypt": "^5.1.1",
     "next": "14.0.4",
     "next-auth": "^4.24.5",
     "react": "^18",
-    "react-dom": "^18"
+    "react-dom": "^18",
+    "react-query": "^3.39.3"
   },
   "devDependencies": {
+    "@types/bcrypt": "^5.0.2",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
+    "dotenv-cli": "^7.3.0",
     "eslint": "^8",
     "eslint-config-next": "14.0.4",
     "prisma": "^5.7.0",
