--- a/package.json
+++ b/package.json
@@ -20,9 +20,12 @@
     "antd": "^5.12.1",
     "axios": "^1.6.2",
     "bcrypt": "^5.1.1",
+    "chart.js": "^4.4.1",
+    "human-date": "^1.4.0",
     "next": "14.0.4",
     "next-auth": "5.0.0-beta.4",
     "react": "^18",
+    "react-chartjs-2": "^5.2.0",
     "react-dom": "^18",
     "react-query": "^3.39.3",
     "react-redux": "^9.0.4",
@@ -30,6 +33,7 @@
   },
   "devDependencies": {
     "@types/bcrypt": "^5.0.2",
+    "@types/human-date": "^1.4.5",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
